:pencil2: fix mongodb

--- a/content/posts/2019-10-18-MongoDB配置.md
+++ b/content/posts/2019-10-18-MongoDB配置.md
@@ -1,5 +1,5 @@
 ---
-title: "Mac上 MongoDB 配置与使用"
+title: "macOS 下 MongoDB 配置与使用"
 date: 2019-10-18T23:23:09+08:00
 draft: false
 tags: ["环境配置","前端","数据库"]
@@ -72,7 +72,12 @@ mongod --config  /Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/data/etc/m
 
 **一定要记得 添加 -f 或者 --config 参数并指明 mongo.config 文件的绝对路径** 不然，你之前配置的 mongo.conf 文件就没有作用了
 
-<del>
+---
+
+**注意下面的方法已经失效**
+
+---
+
 ### Homebrew 下载
 使用 macOS 上最好用的包管理工具 [Homebrew](https://brew.sh/) 下载。
 
@@ -85,7 +90,8 @@ mongod --config  /Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/data/etc/m
 **在 Homebrew 中下载你需要的版本：**例如：`brew install mongodb`
 
 等待安装完成就好。使用 Homebrew 安装的好处就在于不用关心环境配置
-</del>
+
+---
 
 **经过实际验证，现在 Homebrew 似乎已经不支持 mongodb 的下载了，不知道具体原因，也许是我个人环境造成的。**
 
