--- a/content/posts/2019-10-19-zsh.md
+++ b/content/posts/2019-10-19-zsh.md
@@ -6,28 +6,42 @@ tags: ["环境配置","工具"]
 categories: ["系统环境"]
 ---
 本文旨记录环境配置的命令行，对于 zsh 和 oh-my-zsh 不熟悉，请自行百度～
+
 * 更新系统资源列表：`sudo apt-get update`
+
 * 更新系统软件：`sudo apt-get upgrade`
+
 * 安装 zsh：`sudo apt-get install zsh`
+
 * 安装 git：`sudo apt-get install git`
+
 * 把 zsh 设定为默认命令行工具：`chsh -s /bin/zsh`
+
 * 重启：`reboot`
-* 安装 oh-my-zsh:`sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"`
+
+* 安装 oh-my-zsh:
+
+    `sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"`
     
     或者
+    
     `sh -c "$(wget https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh -O -)"`
 
-* 安装 my-zsh 插件： 
+* 安装 my-zsh 插件：
+ 
     * 语法高亮插件
-    `git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh}/plugins/zsh-syntax-highlighting`
+    
+        `git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh}/plugins/zsh-syntax-highlighting`
 
     * 自动提示插件
-    `git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh}/plugins/zsh-autosuggestions`
+    
+        `git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh}/plugins/zsh-autosuggestions`
 
     这里发现了一些有意思的事情,my-zsh 的插件都在这里：
-
+ 
     ![插件位置](https://blog-img-1256389522.cos.ap-chengdu.myqcloud.com/MongoDB/20191018192633.png)
 
     所以你只要把 github 上的插件，克隆到这里就行了
 
 * 最后配置  .zshrc 文件就行了
+
