:zap: 更新《Ubuntu 安装配置 oh-my-zsh》一文

--- a/content/posts/2019-10-19-zsh.md
+++ b/content/posts/2019-10-19-zsh.md
@@ -45,3 +45,15 @@ categories: ["系统环境"]
 
 * 最后配置  .zshrc 文件就行了
 
+修改主题
+
+`ZSH_THEME="ys"`
+
+配置上边安装的插件
+
+`plugins=(git zsh-autosuggestions zsh-syntax-highlighting)`
+
+退出重启zsh
+
+`source ~/.zshrc`
+
