--- a/content/posts/2019-10-19-zsh.md
+++ b/content/posts/2019-10-19-zsh.md
@@ -5,21 +5,24 @@ draft: false
 tags: ["环境配置","工具"]
 categories: ["系统环境"]
 ---
+**最后更新时间：2020 年 1 月 30 日**
+
+---
 本文旨记录环境配置的命令行，对于 zsh 和 oh-my-zsh 不熟悉，请自行百度～
 
-* 更新系统资源列表：`sudo apt-get update`
+1. 更新系统资源列表：`sudo apt-get update`
 
-* 更新系统软件：`sudo apt-get upgrade`
+2. 更新系统软件：`sudo apt-get upgrade`
 
-* 安装 zsh：`sudo apt-get install zsh`
+3. 安装 zsh：`sudo apt-get install zsh`
 
-* 安装 git：`sudo apt-get install git`
+4. 安装 git：`sudo apt-get install git`
 
-* 把 zsh 设定为默认命令行工具：`chsh -s /bin/zsh`
+5. 把 zsh 设定为默认命令行工具：`chsh -s /bin/zsh` （非必须，可跳过，执行完成第 7 步后，终端会询问是否切换为 zsh ～）
 
-* 重启：`reboot`
+6. 重启：`reboot` （非必须，可跳过）
 
-* 安装 oh-my-zsh:
+7. 安装 oh-my-zsh:
 
     `sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"`
     
@@ -27,33 +30,54 @@ categories: ["系统环境"]
     
     `sh -c "$(wget https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh -O -)"`
 
-* 安装 my-zsh 插件：
+    **此处遇到问题，国内的服务器或主机在没有梯子的情况下，执行上面两条命令，大概率会因为 GitHub 被墙而无法下载安装脚本**
+    
+    **解决方案：目前我知道的方法是通过未被墙的机器，下载脚本，然后通过 Ftp 上传至主机上执行安装，若有更好的解决方法，可以留言分享**
+
+8. 安装 my-zsh 插件：
  
-    * 语法高亮插件
+    * 命令高亮插件
     
         `git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh}/plugins/zsh-syntax-highlighting`
 
     * 自动提示插件
     
         `git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh}/plugins/zsh-autosuggestions`
+    
+    * 自动补全插件
+    
+        `git clone https://github.com/zsh-users/zsh-completions ${ZSH_CUSTOM:-~/.oh-my-zsh}/plugins/zsh-completions`
 
     这里发现了一些有意思的事情,my-zsh 的插件都在这里：
  
     ![插件位置](https://blog-img-1256389522.cos.ap-chengdu.myqcloud.com/MongoDB/20191018192633.png)
 
-    所以你只要把 github 上的插件，克隆到这里就行了
+    所以理论上你只要把 github 上的插件，克隆到这里就行了
 
-* 最后配置  .zshrc 文件就行了
+9. 最后配置  .zshrc 文件就行了
 
-修改主题
+    * 修改主题
 
-`ZSH_THEME="ys"`
+        `ZSH_THEME="ys"`
 
-配置上边安装的插件
+        可使用 [`sed`](https://www.cnblogs.com/ggjucheng/archive/2013/01/13/2856901.html) 命令一键修改：
 
-`plugins=(git zsh-autosuggestions zsh-syntax-highlighting)`
+        `sed -i '/^ZSH_THEME=/c\ZSH_THEME="ys"' ~/.zshrc`
 
-退出重启zsh
+    * 配置上边安装的插件
 
-`source ~/.zshrc`
+        `plugins=(git zsh-autosuggestions zsh-syntax-highlighting zsh-completions)`
+
+        使用 [`sed`](https://www.cnblogs.com/ggjucheng/archive/2013/01/13/2856901.html) 命令一键修改：
+
+        `sed -i '/^plugins=/c\plugins=(git z zsh-syntax-highlighting zsh-autosuggestions zsh-completions)' ~/.zshrc`
+    
+    * zsh-com­ple­tions 插件还需把 autoload -U compinit && compinit 添加到.zshrc。
+
+        输入命令可一键添加：
+        ```[ -z "`grep "autoload -U compinit && compinit" ~/.zshrc`" ] && echo "autoload -U compinit && compinit" >> ~/.zshrc```
+
+    * 重载zsh
+
+        `source ~/.zshrc`
 
