:pencil: update 《mongoDB》

--- a/content/posts/2019-10-18-MongoDB.md
+++ b/content/posts/2019-10-18-MongoDB.md
@@ -24,48 +24,45 @@ categories: ["前端那些事儿"]
 ![修改后的文件结构](https://blog-img-1256389522.cos.ap-chengdu.myqcloud.com/MongoDB/20191018093858.png)
 
 * 编辑 `mongo.conf` ：
+
 ``` 
 #数据库路径(找到你自己刚才新建的 db 文件夹的绝对路径)
 dbpath=/Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/data/db
-
 #日志输出文件路径（找到你自己刚才新建的 mongodb.log 文件夹的绝对路径）
 logpath=/Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/data/logs/mongodb.log
-
 #错误日志采用追加模式，配置这个选项后mongodb的日志会追加到现有的日志文件，而不是从新创建一个新文件
 logappend=true
-
 #启用日志文件，默认启用
 journal=true
-
 #这个选项可以过滤掉一些无用的日志信息，若需要调试使用请设置为false
 quiet=false
-
 #是否后台启动，有这个参数，就可以实现后台运行
 fork=false
-
 #端口号 默认为27017
 port=27017
 ```
 
-* 配置环境变量：在这里我使用的 `zsh` 终端，所以仅言明 `zsh` 的配置方法
+* 配置环境变量：
+
+在这里我使用的 `zsh` 终端，所以仅言明 `zsh` 的配置方法:
     * 打开并编辑 `.zshrc` 文件：`vim ~/.zshrc`, 添加内容如下：
+
     ```
     # mongodb
     export PATH=/Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/bin:${PATH}
-
     #记得把上边路径换成你自己的 bin 文件夹的绝对路径
     ```
-    * 重启 `zsh` 服务 `source ~/.zshrc`
+* 重启 `zsh` 服务 `source ~/.zshrc`
 
 至此 mongodb 配置完毕，来尝试启动一下吧！
+
 ```
 # 启动命令：
 mongod -f /Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/data/etc/mongo.conf
-
 # 或者
 mongod --config  /Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/data/etc/mongo.conf
-
 ```
+
 启动之后，可以尝试使用一些可视化工具连接一下，此处推荐 [Robo 3T](https://robomongo.org/download)
 
 ![Robo 3T](https://blog-img-1256389522.cos.ap-chengdu.myqcloud.com/MongoDB/20191018094401.png)
