:pencil: add time

--- a/content/posts/2019-10-18-MongoDB.md
+++ b/content/posts/2019-10-18-MongoDB.md
@@ -5,6 +5,9 @@ draft: false
 tags: ["环境配置","前端","数据库"]
 categories: ["前端那些事儿"]
 ---
+**最后更新时间：2020 年 1 月 30 日**
+
+---
 [MongoDB](https://www.mongodb.com/) 是一个基于分布式文件存储的数据库，是目前前端开发中使用较多的非关系数据库之一。
 
 ## 下载
