:bug: 修复代码块显示异常的问题

--- a/content/posts/2019-10-18-MongoDB.md
+++ b/content/posts/2019-10-18-MongoDB.md
@@ -28,7 +28,7 @@ categories: ["前端那些事儿"]
 
 * 编辑 `mongo.conf` ：
 
-``` 
+```bash
 #数据库路径(找到你自己刚才新建的 db 文件夹的绝对路径)
 dbpath=/Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/data/db
 #日志输出文件路径（找到你自己刚才新建的 mongodb.log 文件夹的绝对路径）
@@ -49,17 +49,17 @@ port=27017
 
 在这里我使用的 `zsh` 终端，所以仅言明 `zsh` 的配置方法:
     * 打开并编辑 `.zshrc` 文件：`vim ~/.zshrc`, 添加内容如下：
-
-    ```
+    
+```bash
     # mongodb
     export PATH=/Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/bin:${PATH}
     #记得把上边路径换成你自己的 bin 文件夹的绝对路径
-    ```
+```
 * 重启 `zsh` 服务 `source ~/.zshrc`
 
 至此 mongodb 配置完毕，来尝试启动一下吧！
 
-```
+```bash
 # 启动命令：
 mongod -f /Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/data/etc/mongo.conf
 # 或者
