:lipstick: update picture URL

--- a/content/posts/2019-10-18-MongoDB.md
+++ b/content/posts/2019-10-18-MongoDB.md
@@ -14,17 +14,17 @@ categories: ["前端那些事儿"]
 ### 官网下载
 [官网下载地址](https://www.mongodb.com/download-center/enterprise)，如下图，选择你所需要的 MongoDB 版本就好
 
-![官网下载选择界面](https://blog-img-1256389522.cos.ap-chengdu.myqcloud.com/MongoDB/20191018083957.png)
+![官网下载选择界面](https://tva1.sinaimg.cn/large/0082zybpgy1gbzea6mb17j31hm0u045g.jpg)
 
 下载完成以后，打开下载的压缩包，解压后的文件目录大致如下：
 
-![文件结构](https://blog-img-1256389522.cos.ap-chengdu.myqcloud.com/MongoDB/20191018085755.png)
+![文件结构](https://tva1.sinaimg.cn/large/0082zybpgy1gbzea7xjunj313q0lk7bs.jpg)
 
 其中 bin 文件夹下存放的都是 mongoDB 的命令，接下来我们三步配置
 
 * 构建目录结构：在 mongoDB 文件夹下新建 `data` 文件夹；然后在 `data` 文件夹下新建 `db`、`logs` 和 `etc` 三个文件夹分别用于存放数据、输出日志和环境配置；然后在 `logs` 文件夹下建立 `mongodb.log` 文件，在 `etc` 下新建 `mongo.conf`
 
-![修改后的文件结构](https://blog-img-1256389522.cos.ap-chengdu.myqcloud.com/MongoDB/20191018093858.png)
+![修改后的文件结构](https://tva1.sinaimg.cn/large/0082zybpgy1gbzea8z8lkj317a0rmqa7.jpg)
 
 * 编辑 `mongo.conf` ：
 
@@ -68,7 +68,7 @@ mongod --config  /Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/data/etc/m
 
 启动之后，可以尝试使用一些可视化工具连接一下，此处推荐 [Robo 3T](https://robomongo.org/download)
 
-![Robo 3T](https://blog-img-1256389522.cos.ap-chengdu.myqcloud.com/MongoDB/20191018094401.png)
+![Robo 3T](https://tva1.sinaimg.cn/large/0082zybpgy1gbzea9w2m9j31uj0u011t.jpg)
 
 **一定要记得 添加 -f 或者 --config 参数并指明 mongo.config 文件的绝对路径** 不然，你之前配置的 mongo.conf 文件就没有作用了
 
@@ -85,7 +85,7 @@ mongod --config  /Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/data/etc/m
 `/usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"`
  
 **在 Homebrew 中搜索可下载版本：**`brew search mongodb`
-![](https://blog-img-1256389522.cos.ap-chengdu.myqcloud.com/MongoDB/20191018084723.png)
+![](https://tva1.sinaimg.cn/large/0082zybpgy1gbzeaabs1ij30q00batjj.jpg)
 
 **在 Homebrew 中下载你需要的版本：**例如：`brew install mongodb`
 
@@ -95,4 +95,4 @@ mongod --config  /Users/zhangsan/Documents/mongodb-macos-x86_64-4.2.0/data/etc/m
 
 **经过实际验证，现在 Homebrew 似乎已经不支持 mongodb 的下载了，不知道具体原因，也许是我个人环境造成的。**
 
-![不能下载了](https://blog-img-1256389522.cos.ap-chengdu.myqcloud.com/MongoDB/20191018093512.png)
+![不能下载了](https://tva1.sinaimg.cn/large/0082zybpgy1gbzeabsimkj312u0g01ec.jpg)
