--- a/content/posts/2019-10-19-zsh.md
+++ b/content/posts/2019-10-19-zsh.md
@@ -50,7 +50,7 @@ categories: ["系统环境"]
 
     这里发现了一些有意思的事情,my-zsh 的插件都在这里：
  
-    ![插件位置](https://blog-img-1256389522.cos.ap-chengdu.myqcloud.com/MongoDB/20191018192633.png)
+    ![插件位置](https://tva1.sinaimg.cn/large/0082zybpgy1gbzea53gdbj30tu18ywjl.jpg)
 
     所以理论上你只要把 github 上的插件，克隆到这里就行了
 
