:pencil: uodate zsh

--- a/content/posts/2019-10-19-zsh.md
+++ b/content/posts/2019-10-19-zsh.md
@@ -5,7 +5,7 @@ draft: false
 tags: ["环境配置","工具"]
 categories: ["系统环境"]
 ---
-**最后更新时间：2020 年 1 月 30 日**
+**最后更新时间：2020 年 3 月 10 日**
 
 ---
 本文旨记录环境配置的命令行，对于 zsh 和 oh-my-zsh 不熟悉，请自行百度～
@@ -25,31 +25,35 @@ categories: ["系统环境"]
 7. 安装 oh-my-zsh:
 
     `sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"`
-    
+
     或者
-    
+
     `sh -c "$(wget https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh -O -)"`
 
     **此处遇到问题，国内的服务器或主机在没有梯子的情况下，执行上面两条命令，大概率会因为 GitHub 被墙而无法下载安装脚本**
-    
-    **解决方案：目前我知道的方法是通过未被墙的机器，下载脚本，然后通过 Ftp 上传至主机上执行安装，若有更好的解决方法，可以留言分享**
+
+    +   **解决方案一**：目前我知道的方法是通过未被墙的机器，下载脚本，然后通过 Ftp 上传至主机上执行安装。
+
+    +   **解决方案二**：在游览器中打开`install.sh`文件[链接](https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)进行预览，将预览内容拷贝下来然后在终端使用命令`vim install.sh` 新建并编辑一个`install.sh`文件，将前面复制的内容粘贴到该文件中保存并退出。使用`chmod 777 install.sh` 给文件添加可执行权限，然后运行并安装。这是目前我认为的最好的解决方案～
+
+        ![亲测可行](https://tva1.sinaimg.cn/large/00831rSTgy1gco9z1q6f4j30mi0hwwvh.jpg)
 
 8. 安装 my-zsh 插件：
- 
+
     * 命令高亮插件
-    
+
         `git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh}/plugins/zsh-syntax-highlighting`
 
     * 自动提示插件
-    
+
         `git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh}/plugins/zsh-autosuggestions`
-    
+
     * 自动补全插件
-    
+
         `git clone https://github.com/zsh-users/zsh-completions ${ZSH_CUSTOM:-~/.oh-my-zsh}/plugins/zsh-completions`
 
     这里发现了一些有意思的事情,my-zsh 的插件都在这里：
- 
+
     ![插件位置](https://tva1.sinaimg.cn/large/0082zybpgy1gbzea53gdbj30tu18ywjl.jpg)
 
     所以理论上你只要把 github 上的插件，克隆到这里就行了
@@ -71,7 +75,7 @@ categories: ["系统环境"]
         使用 [`sed`](https://www.cnblogs.com/ggjucheng/archive/2013/01/13/2856901.html) 命令一键修改：
 
         `sed -i '/^plugins=/c\plugins=(git z zsh-syntax-highlighting zsh-autosuggestions zsh-completions)' ~/.zshrc`
-    
+
     * zsh-com­ple­tions 插件还需把 autoload -U compinit && compinit 添加到.zshrc。
 
         输入命令可一键添加：
