:heavy_plus_sign: add theme src

--- a/blog/posts/2020-08-21.md
+++ b/blog/posts/2020-08-21.md
@@ -1,10 +1,9 @@
 ---
-title: “在 Mac 下开箱 Ranger 的初体验"
+title: 在 Mac 下开箱 Ranger 的初体验
 date: 2020-08-21
 draft: false
-tags: ["高效工具"]
-categories: [“瞎折腾"]
-
+tags: [高效工具]
+categories: [瞎折腾]
 ---
 
 ## 安装Ranger及其插件
