:bug: change tags

--- a/blog/posts/2019-10-18-MongoDB.md
+++ b/blog/posts/2019-10-18-MongoDB.md
@@ -2,8 +2,8 @@
 title: "macOS 下 MongoDB 配置与使用"
 date: 2019-10-18
 draft: false
-tags: ["环境配置","前端","数据库"]
-categories: ["前端那些事儿"]
+tags: [MongoDB]
+categories: [🎁 初体验]
 ---
 **最后更新时间：2020 年 1 月 30 日**
 
