--- a/blog/posts/2019-10-19-zsh.md
+++ b/blog/posts/2019-10-19-zsh.md
@@ -2,8 +2,8 @@
 title: "Ubuntu 安装配置 oh-my-zsh "
 date: 2019-10-19
 draft: false
-tags: ["环境配置","工具"]
-categories: ["系统环境"]
+tags: [zsh,oh-my-zsh]
+categories: [🛠 高效工具,🎁 初体验]
 ---
 **最后更新时间：2020 年 3 月 10 日**
 
