--- a/blog/posts/2020-01-15-Docker编译时报137错误代码.md
+++ b/blog/posts/2020-01-15-Docker编译时报137错误代码.md
@@ -1,8 +1,8 @@
 ---
 title: "网络问题一次解决！(GitHub,Google)"
 date: 2020-01-16
-tags: ["Google","GitHub"]
-categories: ["奇妙技巧"]
+tags: [Google,GitHub]
+categories: [🔑 奇妙技巧]
 ---
 过年回家一趟，才知道家里的网络是有多么的垃圾～各种网站被墙，即使拥有小飞机也解决不了任何问题，毕竟家里的网速也是硬伤，时常会因为各种网络时延长丢包！！于是乎，我就踏上了这寻找各种网络问题解决办法的旅途，其中一些有好的解决办法便搬运一下，以借后人参考～
 
