--- a/blog/posts/2020-02-03-typora使用体验.md
+++ b/blog/posts/2020-02-03-typora使用体验.md
@@ -1,8 +1,8 @@
 ---
 title: "Typora——最好的Markdown编辑器"
 date: 2020-02-03
-tags: [ "Typora","Markdown" ]
-categories: ["高效工具"]
+tags: [ Typora,Markdown]
+categories: [🛠 高效工具,🎁 初体验]
 ---
 
 写下此文时的使用版本如图所示：
