--- a/blog/posts/2020-06-23-重装Win7的恶心之路.md
+++ b/blog/posts/2020-06-23-重装Win7的恶心之路.md
@@ -1,8 +1,8 @@
 ---
 title: "一次给人重装 Win7 恶心之路🤢🤮"
 date: 2020-06-23
-tags: ["Win7","操作系统"]
-categories: ["BUG集锦"]
+tags: [Win7,操作系统]
+categories: [🐛 BUG集锦]
 ---
 ## 问题描述
 
