--- a/blog/posts/2020-06-27-Docker编译时报137错误代码.md
+++ b/blog/posts/2020-06-27-Docker编译时报137错误代码.md
@@ -1,8 +1,8 @@
 ---
 title: "Docker中的Drone编译前端项目时报137错误代码"
 date: 2020-06-27
-tags: ["Docker","Drone"]
-categories: ["BUG集锦"]
+tags: [Docker,Drone]
+categories: [🐛 BUG集锦]
 ---
 # Docker中的Drone编译前端项目时报137错误代码
 
