--- a/blog/posts/2019-10-19-zsh.md
+++ b/blog/posts/2019-10-19-zsh.md
@@ -3,7 +3,7 @@ title: "Ubuntu 安装配置 oh-my-zsh "
 date: 2019-10-19
 draft: false
 tags: [zsh,oh-my-zsh]
-categories: [🛠 高效工具,🎁 初体验]
+categories: [🛠 高效工具]
 ---
 **最后更新时间：2020 年 3 月 10 日**
 
