--- a/blog/posts/2021-04-23-1833.雪糕的最大数量.md
+++ b/blog/posts/2021-04-23-1833.雪糕的最大数量.md
@@ -6,6 +6,7 @@ categories: [📝 算法题解]
 ---
 #  [1833. 雪糕的最大数量](https://leetcode-cn.com/problems/maximum-ice-cream-bars/)
 
+**小目标：百篇题解之八，破百开源成库**。关注我（[Github](https://github.com/KimYangOfCat)、[力扣](https://leetcode-cn.com/u/kimyang/)），即可获取最新题解。
 ## 题目描述
 
 夏日炎炎，小男孩 Tony 想买一些雪糕消消暑。
@@ -54,7 +55,7 @@ categories: [📝 算法题解]
 
 ## 题解
 
-本题难度不大，使用贪心算法很容易解决，让我感觉有点儿不像是中等题的感觉。在题目的描述中，每类雪糕的可购买数量没有明确说明是一，这点儿还蛮让人疑惑的。但是如果加上购买数量不受限制的话，这道题的难度会上升许多，你不妨思考一下这种情况。
+本题难度不大，使用贪心算法很容易解决，让我感觉有点儿不像是中等题的难度。在题目的描述中，每类雪糕的可购买数量没有明确说明是一，这点儿还蛮让人疑惑的。但是如果加上购买数量不受限制的话，这道题的难度会上升许多，你不妨思考一下这种情况。
 
 ### 方法一：贪心算法
 
