--- a/blog/posts/2021-05-01-690.员工的重要性.md
+++ b/blog/posts/2021-05-01-690.员工的重要性.md
@@ -1,3 +1,9 @@
+---
+title: "「690. 员工的重要性」题解"
+date: 2021-05-01
+tags: [LeetCode,Algorithm]
+categories: [📝 算法题解]
+---
 # [690. 员工的重要性](https://leetcode-cn.com/problems/employee-importance/)
 
 **小目标：百篇题解之十一，破百开源成库**。关注我（[Github](https://github.com/KimYangOfCat)、[力扣](https://leetcode-cn.com/u/kimyang/)），即可获取最新题解。
