--- a/blog/posts/2021-05-23-如何在TC39中提起一项提案.md
+++ b/blog/posts/2021-05-23-如何在TC39中提起一项提案.md
@@ -4,13 +4,6 @@ date: 2021-05-23
 tags: [ECMA,前端]
 categories: [🌏 翻译校对]
 ---
-> * 原文地址：[Championing a proposal at TC39](https://github.com/tc39/how-we-work/blob/master/champion.md)
-> * 原文作者：[ECMA TC39](https://github.com/tc39/how-we-work)
-> * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
-> * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/ECMA-TC39/Championing-a-proposal-at-TC39.md](https://github.com/xitu/gold-miner/blob/master/article/ECMA-TC39/Championing-a-proposal-at-TC39.md)
-> * 译者：[霜羽 Hoarfroster](https://github.com/PassionPenguin)
-> * 校对者：[Kimhooo](https://github.com/Kimhooo)，[KimYangOfCat](https://github.com/KimYangOfCat)
-
 **本文是为 TC39 代表编写的（参见[加入 TC39](https://github.com/tc39/how-we-work/blob/master/join-tc39.md)。如果您不是代表，您也可以帮助提案的发起人完成其中的一些任务，不过其中一些工作涉及在 TC39 会议上出席，以及在委员会中提供介绍和建立共识。**
 
 # 如何在 TC39 提起一项提案？
@@ -157,3 +150,10 @@ categories: [🌏 翻译校对]
 - **Archive 提案仓库**。第四阶段的提案将不会有进一步的更改，将来的任何更改都将是针对主要规范的单独提案。
 - **确保提供了良好的文档**。理想情况下，您在投标过程的早期就开发了文档。现在，至关重要的是，各个级别的文档都必须具有良好的质量，以供广大 JavaScript 开发者使用。
 - **确保在可能的情况下有条件地使用 polyfills 或 shims**。一旦提案进入第四阶段，则在可行且正确的情况下，请顺应内置的实现。这使开发者可以在不牺牲正确性的情况下，尽可能地受益于原生实现的更好性能。对于 polyfills 或 shims，如果存在已知的错误和偏差，则严格检查原生实现是否有用，而不是仅检查原生实现的存在是很有帮助的。但是，以依赖于修改全局环境的形式进行广泛部署存在兼容性风险，尤其是在提案成为标准之前 —— 使用不内置于运行环境中的 polyfill 可能会有所帮助。
+
+> * 原文地址：[Championing a proposal at TC39](https://github.com/tc39/how-we-work/blob/master/champion.md)
+> * 原文作者：[ECMA TC39](https://github.com/tc39/how-we-work)
+> * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
+> * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/ECMA-TC39/Championing-a-proposal-at-TC39.md](https://github.com/xitu/gold-miner/blob/master/article/ECMA-TC39/Championing-a-proposal-at-TC39.md)
+> * 译者：[霜羽 Hoarfroster](https://github.com/PassionPenguin)
+> * 校对者：[Kimhooo](https://github.com/Kimhooo)，[Kim Yang](https://github.com/KimYangOfCat)
