--- a/blog/posts/2021-05-24-使用GPU.js让你的Angular.js提速10倍.md
+++ b/blog/posts/2021-05-24-使用GPU.js让你的Angular.js提速10倍.md
@@ -1,16 +1,9 @@
 ---
 title: "使用 GPU.js 让你的 Angular.js 程序提速 10 倍"
 date: 2021-05-24
-tags: [ECMA,前端]
+tags: [Angular,前端]
 categories: [🌏 翻译校对]
 ---
-> * 原文地址：[Speed Up Your Angular Projects by 10x With GPU.js](https://betterprogramming.pub/speed-up-your-angular-projects-by-10x-with-gpu-js-92c4b2bad4e3)
-> * 原文作者：[Chameera Dulanga](https://medium.com/@chameeradulanga)
-> * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
-> * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/speed-up-your-angular-projects-by-10x-with-gpu-js.md](https://github.com/xitu/gold-miner/blob/master/article/2021/speed-up-your-angular-projects-by-10x-with-gpu-js.md)
-> * 译者：[samyu2000](https://github.com/samyu2000)
-> * 校对者：[PassionPenguin](https://github.com/PassionPenguin), [KimYangOfCat](https://github.com/KimYangOfCat)
-
 # 使用 GPU.js 让你的 Angular.js 程序提速 10 倍
 
 ![Photo by [Lucas Kepner](https://unsplash.com/@lucaskphoto?utm_source=medium&utm_medium=referral) on [Unsplash](https://unsplash.com?utm_source=medium&utm_medium=referral).](https://cdn-images-1.medium.com/max/12878/0*rDxYRR86genkrPIK)
@@ -315,3 +308,10 @@ export class AppComponent {
 当使用 GPU 执行某些任务，我们需要留意一下，才能得到最优方案，以便充分利用 GPU 的功能。所以我建议大家在开发下一个 Angular 应用程序时，试着使用 GPU.js 来提高程序性能。
 
 感谢你阅读本文！
+
+> * 原文地址：[Speed Up Your Angular Projects by 10x With GPU.js](https://betterprogramming.pub/speed-up-your-angular-projects-by-10x-with-gpu-js-92c4b2bad4e3)
+> * 原文作者：[Chameera Dulanga](https://medium.com/@chameeradulanga)
+> * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
+> * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/speed-up-your-angular-projects-by-10x-with-gpu-js.md](https://github.com/xitu/gold-miner/blob/master/article/2021/speed-up-your-angular-projects-by-10x-with-gpu-js.md)
+> * 译者：[samyu2000](https://github.com/samyu2000)
+> * 校对者：[PassionPenguin](https://github.com/PassionPenguin), [Kim Yang](https://github.com/KimYangOfCat)
