update some posts

--- a/blog/posts/2021-05-02-Mint.md
+++ b/blog/posts/2021-05-02-Mint.md
@@ -1,5 +1,5 @@
 ---
-title: "将 JavaScript 放到一边 —— 用 Mint 这门强大的语言来创建一个 Web 应用"
+title: "【译】将 JavaScript 放到一边 —— 用 Mint 这门强大的语言来创建一个 Web 应用"
 date: 2021-05-02
 tags: [Mint,前端]
 categories: [🌏 翻译校对]
