--- a/blog/posts/2021-05-19-ECMAScript2021.md
+++ b/blog/posts/2021-05-19-ECMAScript2021.md
@@ -1,5 +1,5 @@
 ---
-title: "有关 ECMAScript 最新版本的所有信息｜ECMAScript 2021"
+title: "【译】有关 ECMAScript 最新版本的所有信息｜ECMAScript 2021"
 date: 2021-05-19
 tags: [ECMA,前端]
 categories: [🌏 翻译校对]
