--- a/blog/posts/2021-05-24-使用GPU.js让你的Angular.js提速10倍.md
+++ b/blog/posts/2021-05-24-使用GPU.js让你的Angular.js提速10倍.md
@@ -4,7 +4,7 @@ date: 2021-05-24
 tags: [Angular,前端]
 categories: [🌏 翻译校对]
 ---
-# 使用 GPU.js 让你的 Angular.js 程序提速 10 倍
+# 使用 GPU.js 让你的 Angular 程序提速 10 倍
 
 ![Photo by [Lucas Kepner](https://unsplash.com/@lucaskphoto?utm_source=medium&utm_medium=referral) on [Unsplash](https://unsplash.com?utm_source=medium&utm_medium=referral).](https://cdn-images-1.medium.com/max/12878/0*rDxYRR86genkrPIK)
 
