--- a/blog/posts/2021-05-20-Web开发者应该避免的5个CSS的做法.md
+++ b/blog/posts/2021-05-20-Web开发者应该避免的5个CSS的做法.md
@@ -1,5 +1,5 @@
 ---
-title: "【译】Web 开发者应该避免的 5 个 CSS 的做法"
+title: "Web 开发者应该避免的 5 个 CSS 的做法"
 date: 2021-05-20
 tags: [CSS,前端]
 categories: [🌏 翻译校对]
