--- a/blog/posts/2021-05-21-16px或更大的字体大小可以避免iOS的表单缩放问题.md
+++ b/blog/posts/2021-05-21-16px或更大的字体大小可以避免iOS的表单缩放问题.md
@@ -1,5 +1,5 @@
 ---
-title: "【译】16px 或更大的字体大小可以避免 iOS 的表单缩放问题"
+title: "16px 或更大的字体大小可以避免 iOS 的表单缩放问题"
 date: 2021-05-21
 tags: [CSS,前端]
 categories: [🌏 翻译校对]
