--- a/blog/posts/2021-05-24-使用GPU.js让你的Angular.js提速10倍.md
+++ b/blog/posts/2021-05-24-使用GPU.js让你的Angular.js提速10倍.md
@@ -1,5 +1,5 @@
 ---
-title: "【译】使用 GPU.js 让你的 Angular.js 程序提速 10 倍"
+title: "使用 GPU.js 让你的 Angular.js 程序提速 10 倍"
 date: 2021-05-24
 tags: [Angular,前端]
 categories: [🌏 翻译校对]
