--- a/blog/posts/2021-06-01-CORS.md
+++ b/blog/posts/2021-06-01-CORS.md
@@ -1,5 +1,5 @@
 ---
-title: "【译】深入理解 CORS：发展史、工作原理和最佳实践"
+title: "深入理解 CORS：发展史、工作原理和最佳实践"
 date: 2021-06-01
 tags: [Web 安全,前端]
 categories: [🌏 翻译校对]
